# GameOfLife

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default_theme.tres  icon.svg.import  project.godot
fonts/: ibm-plex-sans-latin-400-normal.ttf.import
img/: cell.webp.import  cell.xcf
include/: gameoflife.hpp  messagebox.hpp
nodes/: scene_manager.gd.uid
scenes/: SceneManager.gd.uid  game_board.gd  game_board.gd.uid  game_board.tscn  game_pause_menu.gd  game_pause_menu.gd.uid  game_pause_menu.tscn  main.gd  main.gd.uid  main.tscn  scene_manager.gd  scene_manager.gd.uid
src/: gameoflife.cpp  main.cpp  messagebox.cpp
